--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "lib": [
+            "dom",
+            "es5",
+            "es2015.promise"
+        ]
     },
     "include": [
         "./src/**/*"
