--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-sample",
   "version": "0.0.1",
-  "description": "Sample",
+  "description": "Landing Page",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.4",
+    "has-flag": "^2.0.0",
+    "html-webpack-inline-source-plugin": "0.0.6",
+    "html-webpack-plugin": "^2.28.0",
     "source-map-loader": "^0.1.6",
     "tslint": "^4.4.2",
     "typescript": "^2.1.6",
