--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Welcome to LandingPage!",
   "landingPage": {
     "headline": "Welcome to LandingPage!",
-    "tagline": "Input data and hit `Enter`"
+    "tagline": "Input data and hit `Enter`",
+    "endpoint": "http://localhost"
   },
   "main": "index.js",
   "scripts": {
@@ -18,7 +19,8 @@
     "@types/react-dom": "^0.14.23",
     "aws-sdk": "^2.15.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.4",
