--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "awesome-typescript-loader": "^3.0.4",
     "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "source-map-loader": "^0.1.6",
     "static-site-generator-webpack-plugin": "^3.2.0",
     "style-loader": "^0.13.2",
