--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "@types/extract-text-webpack-plugin": "^2.0.1",
     "awesome-typescript-loader": "^3.0.4",
     "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.1.0",
